@@ -341,7 +341,7 @@ class nggOptions {
 		<h2><?php _e('Image settings','nggallery'); ?></h2>
 		<form name="imagesettings" method="POST" action="<?php echo $this->filepath.'#images'; ?>" >
 		<?php wp_nonce_field('ngg_settings') ?>
-		<input type="hidden" name="page_options" value="imgResize,imgWidth,imgHeight,imgQuality,imgBackup,imgAutoResize,imgCacheSinglePic" />
+		<input type="hidden" name="page_options" value="imgResize,imgWidth,imgHeight,imgQuality,imgBackup,imgAutoResize" />
 			<table class="form-table ngg-options">
 				<tr valign="top">
 					<th valign="top"><label for="fixratio"><?php _e('Resize Images','nggallery') ?></label></th>
@@ -365,11 +365,6 @@ class nggOptions {
 			</table>
 			<h3 class="expert"><?php _e('Single picture','nggallery') ?></h3>
 			<table class="expert form-table ngg-options">
-				<tr>
-					<th valign="top"><?php _e('Cache single pictures','nggallery'); ?></th>
-					<td><input <?php if (is_multisite()) echo 'readonly = "readonly"'; ?> type="checkbox" name="imgCacheSinglePic" value="1" <?php checked('1', $ngg->options['imgCacheSinglePic']); ?> />
-					<span class="setting-description"><?php _e('Creates a file for each singlepic settings. Reduce the CPU load','nggallery') ?></span></td>
-				</tr>
 				<tr>
 					<th valign="top"><?php _e('Clear cache folder','nggallery'); ?></th>
 					<td><input type="submit" name="clearcache" class="button-secondary"  value="<?php _e('Proceed now','nggallery') ;?> &raquo;"/></td>
